# fyze-logger

./: README.md  pyproject.toml  setup.py
fyze_logger/: __init__.py  logger.py
